# comppression-composition-video

./: .clang-format  README.md
client/: CMakeLists.txt  CMakePresets.json
client/.cache/clangd/index/: Main.cpp.005F8272BA7E11E3.idx  client.cpp.D347B7D8E0E47DA3.idx  client.h.26DAD3C1AB897D82.idx  decomression.cpp.01218B2C7F9EE9FD.idx  decomression.h.49C73C53BA907EE3.idx
client/include/: client.h  decomression.h
client/src/: Main.cpp  client.cpp  decomression.cpp
server/: CMakeLists.txt  CMakePresets.json
server/.cache/clangd/index/: Main.cpp.C9BC197635AE76AE.idx  compression.cpp.6EDBF1252ACEE4EC.idx  compression.h.F23BD73B4717D31D.idx  server.cpp.F3894E4CCD7DD706.idx  server.h.C24E6BBDFB36A5D4.idx
server/include/: compression.h  server.h
server/src/: Main.cpp  compression.cpp  server.cpp
tests/: Тестирование_рабочий.xlsx
